# VitraePluginShadowFiltering

./: CMakeLists.txt  README.md
include/VitraePluginShadowFiltering/: Setup.hpp
include/VitraePluginShadowFiltering/tasks/: renderEdgeSilhouette.hpp  shadowBiLin.hpp  shadowEAA.hpp  shadowPCF.hpp  shadowRough.hpp
src/: Setup.cpp
